--- a/index.html
+++ b/index.html
@@ -21,7 +21,36 @@
                     <li class ="top__list"><a href="#"><img src="photo/search-logo.svg" alt="search"></a></li>
                 </ul>
                 <ul class="top__right">
-                    <li class="top__list"><a href="#"><img src="photo/burger-logo.svg" alt="menu"></a></li>
+                    <li class="top__list"><a href="#"><img src="photo/burger-logo.svg" alt="menu"></a>
+                            <div class="mega__box">
+                                <img class="close__mega__box" src="photo/close-logo.svg" alt="close">
+                                <h3 class="mega__box__heading">menu</h3>
+                                <div class="menu__box">
+                                    <h3 class="menu__box__subheading">man</h3>
+                                    <a class="menu__box__link" href="">Accessories</a>
+                                    <a class="menu__box__link" href="">Bags</a>
+                                    <a class="menu__box__link" href="">Denim</a>
+                                    <a class="menu__box__link" href="">T-Shirts</a>
+                                </div>
+                                <div class="menu__box">
+                                    <h3 class="menu__box__subheading">woman</h3>
+                                    <a class="menu__box__link" href="">Accessories</a>
+                                    <a class="menu__box__link" href="">Jackets & Coats</a>
+                                    <a class="menu__box__link" href="">Polos</a>
+                                    <a class="menu__box__link" href="">T-Shirts</a>
+                                    <a class="menu__box__link" href="">Shirts</a>
+                                </div>
+                                <div class="menu__box">
+                                    <h3 class="menu__box__subheading">kids</h3>
+                                    <a class="menu__box__link" href="">Accessories</a>
+                                    <a class="menu__box__link" href="">Jackets & Coats</a>
+                                    <a class="menu__box__link" href="">Polos</a>
+                                    <a class="menu__box__link" href="">T-Shirts</a>
+                                    <a class="menu__box__link" href="">Shirts</a>
+                                    <a class="menu__box__link" href="">Bags</a>
+                                </div>    
+                            </div>
+                    </li>
                     <li class="top__list"><a href="#"><img src="photo/profile-logo.svg" alt="login"></a></li>
                     <li class="top__list"><a href="#"><img src="photo/cart-logo.svg" alt="cart"></a></li>
                 </ul>
