--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                             <div class="mega__box">
                                 <img class="close__mega__box" src="photo/close-logo.svg" alt="close">
                                 <h3 class="mega__box__heading">menu</h3>
-                                <div class="menu__box">
+                                <div class="mega__box__menu">
                                     <h3 class="menu__box__subheading">man</h3>
                                     <a class="menu__box__link" href="">Accessories</a>
                                     <a class="menu__box__link" href="">Bags</a>
                                     <a class="menu__box__link" href="">Denim</a>
                                     <a class="menu__box__link" href="">T-Shirts</a>
                                 </div>
-                                <div class="menu__box">
+                                <div class="mega__box__menu">
                                     <h3 class="menu__box__subheading">woman</h3>
                                     <a class="menu__box__link" href="">Accessories</a>
                                     <a class="menu__box__link" href="">Jackets & Coats</a>
@@ -40,7 +40,7 @@
                                     <a class="menu__box__link" href="">T-Shirts</a>
                                     <a class="menu__box__link" href="">Shirts</a>
                                 </div>
-                                <div class="menu__box">
+                                <div class="mega__box__menu">
                                     <h3 class="menu__box__subheading">kids</h3>
                                     <a class="menu__box__link" href="">Accessories</a>
                                     <a class="menu__box__link" href="">Jackets & Coats</a>
