--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
     <nav class="header">
-        <div class="container">
+        <div class="container__stand">
             <div class="top__bar">
                 <ul class="top__left">
-                    <li class ="top__list"><a href="#"><img src="photo/brand-logo.png" alt="brand"></a></li>
+                    <li class ="top__list"><a href="index.html"><img src="photo/brand-logo.png" alt="brand"></a></li>
                     <li class ="top__list"><a href="#"><img src="photo/search-logo.svg" alt="search"></a></li>
                 </ul>
                 <ul class="top__right">
@@ -72,7 +72,7 @@
         </div>
     </header> 
     <nav class="menu">
-        <div class="container">
+        <div class="container__stand">
             <div class="menu__box">
                 <div class="menu__card__box">
                     <a class="menu__card__link" href="#">
@@ -98,12 +98,12 @@
         </div>      
     </nav>
     <section class="featured__items">
-        <div class="container">
+        <div class="container__stand">
                 <h3 class="featured__items__heading">Featured Items</h3>
                 <p class="featured__items__paragraph">Shop for items based on what we featured in this week</p>
             <div class="item__card__box">
                 <div class="item__card">
-                    <a href="#" class="item__card__link">
+                    <a href="product.html" class="item__card__link">
                         <img class="item__card__photo" src="photo/card-photo-1.jpg" alt="photo 1">
                         <div class="item__card__block">
                             <h4 class="item__card__subheading">ELLERY X M'O CAPSULE</h4>
@@ -114,12 +114,12 @@
                     <div class="add__box">
                         <a class="add" href="#">
                             <img class="add__cart" src="photo/add-to-cart.svg" alt="cart">
-                            <p>Add to Cart</p>
+                            <p class="add__cart__text">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="item__card">
-                    <a href="#" class="item__card__link">
+                    <a href="product.html" class="item__card__link">
                         <img class="item__card__photo" src="photo/card-photo-2.jpg" alt="photo 1">
                         <div class="item__card__block">
                             <h4 class="item__card__subheading">ELLERY X M'O CAPSULE</h4>
@@ -130,12 +130,12 @@
                     <div class="add__box">
                         <a class="add" href="#">
                             <img class="add__cart" src="photo/add-to-cart.svg" alt="cart">
-                            <p>Add to Cart</p>
+                            <p class="add__cart__text">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="item__card">
-                    <a href="#" class="item__card__link">
+                    <a href="product.html" class="item__card__link">
                         <img class="item__card__photo" src="photo/card-photo-3.jpg" alt="photo 1">
                         <div class="item__card__block">
                             <h4 class="item__card__subheading">ELLERY X M'O CAPSULE</h4>
@@ -146,12 +146,12 @@
                     <div class="add__box">
                         <a class="add" href="#">
                             <img class="add__cart" src="photo/add-to-cart.svg" alt="cart">
-                            <p>Add to Cart</p>
+                            <p class="add__cart__text">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="item__card">
-                    <a href="#" class="item__card__link">
+                    <a href="product.html" class="item__card__link">
                         <img class="item__card__photo" src="photo/card-photo-4.jpg" alt="photo 1">
                         <div class="item__card__block">
                             <h4 class="item__card__subheading">ELLERY X M'O CAPSULE</h4>
@@ -162,12 +162,12 @@
                     <div class="add__box">
                         <a class="add" href="#">
                             <img class="add__cart" src="photo/add-to-cart.svg" alt="cart">
-                            <p>Add to Cart</p>
+                            <p class="add__cart__text">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="item__card">
-                    <a href="#" class="item__card__link">
+                    <a href="product.html" class="item__card__link">
                         <img class="item__card__photo" src="photo/card-photo-5.jpg" alt="photo 1">
                         <div class="item__card__block">
                             <h4 class="item__card__subheading">ELLERY X M'O CAPSULE</h4>
@@ -178,12 +178,12 @@
                     <div class="add__box">
                         <a class="add" href="#">
                             <img class="add__cart" src="photo/add-to-cart.svg" alt="cart">
-                            <p>Add to Cart</p>
+                            <p class="add__cart__text">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="item__card">
-                    <a href="#" class="item__card__link">
+                    <a href="product.html" class="item__card__link">
                         <img class="item__card__photo" src="photo/card-photo-6.jpg" alt="photo 1">
                         <div class="item__card__block">
                             <h4 class="item__card__subheading">ELLERY X M'O CAPSULE</h4>
@@ -194,18 +194,18 @@
                     <div class="add__box">
                         <a class="add" href="#">
                             <img class="add__cart" src="photo/add-to-cart.svg" alt="cart">
-                            <p>Add to Cart</p>
+                            <p class="add__cart__text">Add to Cart</p>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="button">
-                <a class="featured__items__button" href="#">Browse All Product</a>
+                <a class="featured__items__button" href="product.html">Browse All Product</a>
             </div>
         </div>
     </section>
     <aside class="advantages">
-        <div class="container">
+        <div class="container__stand">
             <div class="advantages__box">
                 <div class="advantages__item">
                     <img class="advantages__photo" src="photo/truck-logo.svg" alt="truck">
@@ -227,7 +227,7 @@
     </aside>
     <footer class="footer">
         <div class="footer__top">
-            <div class="container">
+            <div class="container__stand">
                 <div class="footer__top__box">
                     <figure class="citation">
                         <img src="photo/citation-photo.png" alt="photo" class="citation__photo">
@@ -245,7 +245,7 @@
             </div>
         </div>
         <div class="footer__bottom">
-            <div class="container">
+            <div class="container__stand">
                 <div class="footer__bottom__box">
                     <p class="footer__bottom__left">© 2021 Brand All Rights Reserved.</p>
                     <div class="social__media__box">
