--- a/catalog.html
+++ b/catalog.html
@@ -78,9 +78,14 @@
                     <details class="filter-product-details">
                         <summary class="filter-product-summary">
                         <span class="filter-product-summary-span">Filter</span>
-                        <img class="filter-logo" src="photo/filter-black.svg" alt="logo">
-                        <img class="filter-logo filter-open" src="photo/filter-pink.svg" alt="logo">
+                            <svg class="product__filter__img" width="15" height="10" viewBox="0 0 15 10" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path 
+                            d="M0.833333 10H4.16667C4.625 10 5 9.625 5 9.16667C5 8.70833 4.625 8.33333 4.16667 8.33333H0.833333C0.375 8.33333 0 8.70833 0 9.16667C0 9.625 0.375 10 0.833333 10ZM0 0.833333C0 1.29167 0.375 1.66667 0.833333 1.66667H14.1667C14.625 1.66667 15 1.29167 15 0.833333C15 0.375 14.625 0 14.1667 0H0.833333C0.375 0 0 0.375 0 0.833333ZM0.833333 5.83333H9.16667C9.625 5.83333 10 5.45833 10 5C10 4.54167 9.625 4.16667 9.16667 4.16667H0.833333C0.375 4.16667 0 4.54167 0 5C0 5.45833 0.375 5.83333 0.833333 5.83333Z"
+                            fill="black"/>
+                        </svg>
                         </summary>
+
                         <div class="filter-product-sidebar">
                             <details class="filter-product-details-in">
                                 <summary class="filter-product-summary-in">Category</summary>
@@ -135,72 +140,78 @@
                     <div class="sort-product-box">
                         <details class="sort-product-details">
                             <summary class="sort-product-summary">Trending now<img class="sort-product-summary-arrow" src="photo/sort-list-arrow.svg" alt="arrow"></summary>
-                            <label class="" for="TrendingNow" checked>
-                            <input type="checkbox" value="" id="TrendingNow">    
-                                Trending now
-                            </label>
-                            <label class="" for="PriceLowHigh">
-                            <input type="checkbox" value="" id="PriceLowHigh">    
-                                Price: Low-High
-                            </label>
-                            <label class="" for="PriceHighLow">
-                            <input type="checkbox" value="" id="PriceHighLow">    
-                                Price: High-Low
-                            </label>
-                            <label class="" for="NewItems">
-                            <input type="checkbox" value="" id="NewItems">    
-                                New Items
-                            </label>
-                            <label class="" for="Sales">
-                            <input type="checkbox" value="" id="Sales">    
-                                Sales
-                            </label>
+                                <div class="sort-product-summary__content">
+                                    <label class="" for="TrendingNow">
+                                        <input type="checkbox" value="" id="TrendingNow" checked>    
+                                            Trending now
+                                        </label>
+                                        <label class="" for="PriceLowHigh">
+                                        <input type="checkbox" value="" id="PriceLowHigh">    
+                                            Price: Low-High
+                                        </label>
+                                        <label class="" for="PriceHighLow">
+                                        <input type="checkbox" value="" id="PriceHighLow">    
+                                            Price: High-Low
+                                        </label>
+                                        <label class="" for="NewItems">
+                                        <input type="checkbox" value="" id="NewItems">    
+                                            New Items
+                                        </label>
+                                        <label class="" for="Sales">
+                                        <input type="checkbox" value="" id="Sales">    
+                                            Sales
+                                        </label>
+
                         </details>
                     </div>
                     <div class="sort-product-box">
                         <details class="sort-product-details">
                             <summary class="sort-product-summary">Size<img class="sort-product-summary-arrow" src="photo/sort-list-arrow.svg" alt="arrow"></summary>
-                            <label class="" for="XS" checked>
-                            <input type="checkbox" value="" id="XS">    
-                                XS
-                            </label>
-                            <label class="" for="S">
-                            <input type="checkbox" value="" id="S">    
-                                S
-                            </label>
-                            <label class="" for="M">
-                            <input type="checkbox" value="" id="M">    
-                                M
-                            </label>
-                            <label class="" for="L">
-                            <input type="checkbox" value="" id="L">    
-                                L
-                            </label>
+                            <div class="sort-product-summary__content">
+                                <label class="" for="XS" checked>
+                                    <input type="checkbox" value="" id="XS">    
+                                        XS
+                                    </label>
+                                    <label class="" for="S">
+                                    <input type="checkbox" value="" id="S">    
+                                        S
+                                    </label>
+                                    <label class="" for="M">
+                                    <input type="checkbox" value="" id="M">    
+                                        M
+                                    </label>
+                                    <label class="" for="L">
+                                    <input type="checkbox" value="" id="L">    
+                                        L
+                                    </label>
+                            </div>
                         </details>
                     </div>
                     <div class="sort-product-box">
                         <details class="sort-product-details">
                             <summary class="sort-product-summary">Price<img class="sort-product-summary-arrow" src="photo/sort-list-arrow.svg" alt="arrow"></summary>
+                            <div class="sort-product-summary__content">
                                 <label class="" for="lowest" checked>
-                                <input type="checkbox" value="" id="lowest">
-                                    0-3000
-                                </label>
-                                <label class="" for="low">
-                                <input type="checkbox" value="" id="low">    
-                                    3000-9000
-                                </label>
-                                <label class="" for="middle">
-                                <input type="checkbox" value="" id="middle">    
-                                    9000-15000
-                                </label>
-                                <label class="" for="high">
-                                <input type="checkbox" value="" id="high">    
-                                    15000-25000
-                                </label>
-                                <label class="" for="highest">
-                                <input type="checkbox" value="" id="highest">    
-                                    25000-max
-                                </label>
+                                    <input type="checkbox" value="" id="lowest">
+                                        0-3000
+                                    </label>
+                                    <label class="" for="low">
+                                    <input type="checkbox" value="" id="low">    
+                                        3000-9000
+                                    </label>
+                                    <label class="" for="middle">
+                                    <input type="checkbox" value="" id="middle">    
+                                        9000-15000
+                                    </label>
+                                    <label class="" for="high">
+                                    <input type="checkbox" value="" id="high">    
+                                        15000-25000
+                                    </label>
+                                    <label class="" for="highest">
+                                    <input type="checkbox" value="" id="highest">    
+                                        25000-max
+                                    </label>
+                            </div>
                         </details>
                     </div>
                 </div>
