--- a/product.html
+++ b/product.html
@@ -108,7 +108,7 @@
                         <p class="product__price pink__elements">$561</p>
                     </div>
                     <div class="product__section__grey__line"></div>
-                    <div class="customization">
+                    <div class="item__product__customization">
                         <select class="form-select customization__list" aria-label="Default select example">
                             <option selected>Choose color</option>
                             <option value="white">white</option>
