--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="button">
-                <a class="featured__items__button" href="product.html">Browse All Product</a>
+                <a class="featured__items__button" href="catalog.html">Browse All Product</a>
             </div>
         </div>
     </section>
