--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 </div>    
                             </div>
                     </li>
-                    <li class="top__list"><a href="#"><img src="photo/profile-logo.svg" alt="login"></a></li>
+                    <li class="top__list"><a href="registration.html"><img src="photo/profile-logo.svg" alt="login"></a></li>
                     <li class="top__list"><a href="#"><img src="photo/cart-logo.svg" alt="cart"></a></li>
                 </ul>
             </div>
