--- a/product.html
+++ b/product.html
@@ -52,8 +52,8 @@
                                 </div>    
                             </div>
                     </li>
-                    <li class="top__list"><a href="#"><img src="photo/profile-logo.svg" alt="login"></a></li>
-                    <li class="top__list"><a href="#"><img src="photo/cart-logo.svg" alt="cart"></a></li>
+                    <li class="top__list"><a href="registration.html"><img src="photo/profile-logo.svg" alt="login"></a></li>
+                    <li class="top__list"><a href="cart.html"><img src="photo/cart-logo.svg" alt="cart"></a></li>
                 </ul>
             </div>
         </div>   
