--- a/cart.html
+++ b/cart.html
@@ -78,7 +78,7 @@
                                 <li class="selected-product-item">Price: <span class="pink__elements">$300</span></li>
                                 <li class="selected-product-item">Color: Red</li>
                                 <li class="selected-product-item">Size: XL</li>
-                                <li class="selected-product-item">Quantity:</li>
+                                <li class="selected-product-item">Quantity: <span class="shipping-quantity-span">2</span></li>
                             </ul>
                         <img class="selected-product-delete" src="photo/close-logo.svg" alt="delete">    
                         </div>
@@ -93,7 +93,7 @@
                                 <li class="selected-product-item">Price: <span class="pink__elements">$300</span></li>
                                 <li class="selected-product-item">Color: Red</li>
                                 <li class="selected-product-item">Size: XL</li>
-                                <li class="selected-product-item">Quantity:</li>
+                                <li class="selected-product-item">Quantity: <span class="shipping-quantity-span">2</span></li>
                             </ul>
                         <img class="selected-product-delete" src="photo/close-logo.svg" alt="delete">    
                         </div>
