--- a/product.html
+++ b/product.html
@@ -77,15 +77,15 @@
             <div class="product__demonstration__box">
                 <div id="carouselExampleControls" class="carousel slide items__product__photo" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="product__photo d-block w-100" src="photo/product-photo-1.png" alt="photo 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="product__photo d-block w-100" src="photo/product-photo-1.png" alt="photo 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="product__photo d-block w-100" src="photo/product-photo-1.png" alt="photo 1">
-                    </div>
+                        <div class="carousel-item active">
+                            <img class="product__photo" src="photo/product-photo-1.png" alt="photo 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="product__photo" src="photo/product-photo-1.png" alt="photo 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="product__photo" src="photo/product-photo-1.png" alt="photo 1">
+                        </div>
                     </div>
                     <button class="carousel-control-prev product__photo__prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
